# ComfyUI-InstaSD

./: .gitignore  InstaSD.py  LICENSE  README.md  __init__.py  gpt.py  pyproject.toml  requirements.txt
apis/: __init__.py  client.py
js/: instasd-button.js  instasd-listeners.js
utils/: node_helpers.py
